--- a/src/main/resources/templates/post_detail.html
+++ b/src/main/resources/templates/post_detail.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="d-flex justify-content-end gap-2">
-                    <button class="btn btn-light rounded-pill px-4">수정</button>
+                    <a th:href="@{/posts/{no}/edit(no=${post.no})}" class="btn btn-light rounded-pill px-4">수정</a>
                     <button class="btn btn-outline-danger rounded-pill px-4">삭제</button>
                 </div>
             </div>
