feat(post): 게시글 수정 기능 구현
- PostService: 게시글 정보를 업데이트하는 updatePost 메서드 추가
- PostController: /posts/{no}/save POST 매핑 추가 및 상세 페이지 리다이렉트
- post_edit_form.html: 실제 폼 전송 가능하도록 th:action 및 method 속성 추가

--- a/src/main/resources/templates/post_edit_form.html
+++ b/src/main/resources/templates/post_edit_form.html
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="card border-0 rounded-5 shadow-sm p-4 p-lg-5">
-                        <form id="editForm" onsubmit="event.preventDefault(); alert('게시글 수정');">
+                        <form id="editForm" th:action="@{/posts/{no}/save(no=${post.no})}" method="post">
                             <div class="row mb-4">
                                 <div class="col-md-6 mb-3 mb-md-0">
                                     <label class="form-label">번호</label>
