--- a/src/main/resources/templates/post_detail.html
+++ b/src/main/resources/templates/post_detail.html
@@ -97,7 +97,10 @@
 
                 <div class="d-flex justify-content-end gap-2">
                     <a th:href="@{/posts/{no}/edit(no=${post.no})}" class="btn btn-light rounded-pill px-4">수정</a>
-                    <button class="btn btn-outline-danger rounded-pill px-4">삭제</button>
+                    <form th:action="@{/posts/{no}/delete(no=${post.no})}" method="post"
+                        onsubmit="return confirm('정말로 이 게시글을 삭제하시겠습니까?');" style="display: inline-block; margin: 0;">
+                        <button type="submit" class="btn btn-outline-danger rounded-pill px-4">삭제</button>
+                    </form>
                 </div>
             </div>
         </div>
