--- a/src/main/resources/templates/post/posts.html
+++ b/src/main/resources/templates/post/posts.html
@@ -70,9 +70,9 @@
                         </thead>
                         <tbody>
                             <tr th:each="post : ${posts}">
-                                <td class="ps-4 py-3 align-middle" th:text="${post.no}">1</td>
+                                <td class="ps-4 py-3 align-middle" th:text="${post.id}">1</td>
                                 <td class="py-3 align-middle">
-                                    <a th:href="@{/posts/{no}(no=${post.no})}"
+                                    <a th:href="@{/posts/{id}(id=${post.id})}"
                                         class="text-decoration-none text-dark fw-semibold" th:text="${post.title}">게시글
                                         제목</a>
                                 </td>
