--- a/src/main/resources/templates/post/post_edit_form.html
+++ b/src/main/resources/templates/post/post_edit_form.html
@@ -86,7 +86,8 @@
                     </div>
 
                     <div class="card border-0 rounded-5 shadow-sm p-4 p-lg-5">
-                        <form id="editForm" th:action="@{/posts/{id}/save(id=${post.id})}" method="post">
+                        <form id="editForm" th:action="@{/posts/{id}/save(id=${post.id})}" th:object="${post}"
+                            method="post">
                             <div class="row mb-4">
                                 <div class="col-md-6 mb-3 mb-md-0">
                                     <label class="form-label">번호</label>
@@ -114,14 +115,22 @@
 
                             <div class="mb-4">
                                 <label for="title" class="form-label">제목</label>
-                                <input type="text" class="form-control" id="title" name="title" th:value="${post.title}"
-                                    required>
+                                <input type="text" class="form-control" id="title" th:field="*{title}"
+                                    th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'">
+                                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}"
+                                    th:errors="*{title}">
+                                    제목 오류 메시지
+                                </div>
                             </div>
 
                             <div class="mb-5">
                                 <label for="content" class="form-label">내용</label>
-                                <textarea class="form-control" id="content" name="content" rows="10"
-                                    th:text="${post.content}" required></textarea>
+                                <textarea class="form-control" id="content" th:field="*{content}" rows="10"
+                                    th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"></textarea>
+                                <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}"
+                                    th:errors="*{content}">
+                                    내용 오류 메시지
+                                </div>
                             </div>
 
                             <div class="d-flex justify-content-center gap-3">
