--- a/src/main/resources/templates/post/post_new_form.html
+++ b/src/main/resources/templates/post/post_new_form.html
@@ -79,16 +79,26 @@
                     </div>
 
                     <div class="card border-0 rounded-5 shadow-sm p-4 p-lg-5">
-                        <form id="postForm" action="/posts/add" method="post">
+                        <form id="postForm" th:action="@{/posts/add}" th:object="${postCreateDto}" method="post">
                             <div class="mb-4">
                                 <label for="title" class="form-label">제목</label>
-                                <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요"
-                                    required>
+                                <input type="text" class="form-control" id="title" th:field="*{title}"
+                                    placeholder="제목을 입력하세요"
+                                    th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'">
+                                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}"
+                                    th:errors="*{title}">
+                                    제목 오류 메시지
+                                </div>
                             </div>
                             <div class="mb-5">
                                 <label for="content" class="form-label">내용</label>
-                                <textarea class="form-control" id="content" name="content" rows="10"
-                                    placeholder="내용을 입력하세요" required></textarea>
+                                <textarea class="form-control" id="content" th:field="*{content}" rows="10"
+                                    placeholder="내용을 입력하세요"
+                                    th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"></textarea>
+                                <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}"
+                                    th:errors="*{content}">
+                                    내용 오류 메시지
+                                </div>
                             </div>
 
                             <div class="d-flex justify-content-center gap-3">
