--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -37,7 +37,7 @@
     <header class="fixed-top samsung-nav-blur border-bottom">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand fw-bold" href="#">VIBE CODING</a>
+                <a class="navbar-brand fw-bold" th:href="@{/}">VIBE CODING</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link active text-sm fw-semibold" aria-current="page" href="#">Courses</a>
+                            <a class="nav-link active text-sm fw-semibold" aria-current="page"
+                                th:href="@{/}">Courses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-sm fw-semibold" href="#">Bootcamps</a>
